# Cardboard3x

./: .gitattributes  .gitignore  README.md  SRCNN.ipynb  pyproject.toml
cardboard4/: __init__.py  data.py  espcn-l2.ipynb  loss.py  utils.py
cardboard4/models/: __init__.py  espcn.py  residual.py
notebook/: espcn-l2.ipynb  espcn-l2.py
notebooks/: ESPCN_L2.ipynb  ESPCN_L2.py  Residual@1.ipynb  Residual@MAE.ipynb  Residual@MS-SSIM.ipynb  Residual@MSE.ipynb  Residual@PencilSketch.ipynb  Residual@Perceptual.ipynb  Residual@SSIM.ipynb  espcn-l2-ignite.ipynb  espcn-l2.ipynb  espcn-sobel-l2-001.ipynb  espcn-sobel-l2-100.ipynb  espcn-sobel-l2.ipynb  espcn-vgg.ipynb  srcnn-unnormalized.ipynb  srcnn-unnormalized.py  srcnn.ipynb  srcnn.py
snapshots/espcn/: L1.pt  L2.pt  MS-SSIM.pt  Perceptual+MaxPool.pt  Perceptual.pt  SSIM.pt  Sketch.pt  sobel-001.pt  sobel-010.pt  sobel-100.pt
snapshots/resnet/: L1.pt  L2.pt  MS-SSIM.pt  Perceptual.pt  SSIM.pt  Sobel.pt
srnn/: __init__.py  dataset.py  image_pairs_dataset.py  tensor_pairs_dataset.py
srnn/models/: srcnn.py
