[tool.poetry]
name = "cardboard4"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
license = "MIT"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.7"
h5py = ">=3.3"
kornia = ">=0.5"
pytorch-lightning = ">=1.3"
scikit-learn = ">=0.24"
torch = ">=1.9"
torchvision = ">=0.10"
wandb = ">=0.10"

[tool.poetry.dev-dependencies]
autoflake = {version = "^1.4", allow-prereleases = true}
black = {version = "^21.6b0", allow-prereleases = true}
click = {version = "^8.0.1", allow-prereleases = true}
isort = {version = "^5.9.2", allow-prereleases = true}
jupytext = {version = "^1.11.3", allow-prereleases = true}
tqdm = {version = "^4.61.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
