[tool.poetry]
name = "cardboard4"
version = "0.1.0"
description = ""
authors = ["Raphael Nepomuceno <58113327+rphln@users.noreply.github.com>"]
license = "MIT"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.7.1"
kornia = "0.5.11"
scikit-learn = "*"
torch = "*"
torchvision = "*"
wandb = "*"
pytorch-ignite = "*"
piqa = "^1.1.7"
torchinfo = "^1.5.3"

[tool.poetry.dev-dependencies]
autoflake = {version = "*", allow-prereleases = true}
black = {version = "*", allow-prereleases = true}
click = {version = "*", allow-prereleases = true}
isort = {version = "*", allow-prereleases = true}
jupytext = {version = "*", allow-prereleases = true}
tqdm = {version = "*", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
